--- a/resources/css/blog.css
+++ b/resources/css/blog.css
@@ -1,6 +1,9 @@
 .bg-blog {
     background-color: #fca65b;
 }
+.ovfrhiddn{
+    overflow: hidden;
+}
 .flex-direction-nav a:before {
   
     font-size: 25px !important;
@@ -13,6 +16,9 @@
     border: 1px solid white;
     padding: 1px 7px;
     border-radius: 5%;
+}
+.h-100{
+    height: 100%;
 }
 
 .txtp1blog {
