--- a/public/css/app.css
+++ b/public/css/app.css
@@ -827,8 +827,6 @@ video {
 	grid-column: span 3 / span 3;
 }.col-span-2{
 	grid-column: span 2 / span 2;
-}.col-span-10{
-	grid-column: span 10 / span 10;
 }.col-span-11{
 	grid-column: span 11 / span 11;
 }.col-span-1{
@@ -1140,8 +1138,6 @@ video {
 	grid-template-columns: repeat(2, minmax(0, 1fr));
 }.grid-cols-12{
 	grid-template-columns: repeat(12, minmax(0, 1fr));
-}.flex-row{
-	flex-direction: row;
 }.flex-col{
 	flex-direction: column;
 }.flex-wrap{
@@ -1267,8 +1263,6 @@ video {
 	border-bottom-width: 1px;
 }.border-r{
 	border-right-width: 1px;
-}.border-l-2{
-	border-left-width: 2px;
 }.border-gray-300{
 	--tw-border-opacity: 1;
 	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
@@ -1292,9 +1286,6 @@ video {
 }.border-indigo-500{
 	--tw-border-opacity: 1;
 	border-color: rgba(99, 102, 241, var(--tw-border-opacity));
-}.border-green-600{
-	--tw-border-opacity: 1;
-	border-color: rgba(5, 150, 105, var(--tw-border-opacity));
 }.bg-white{
 	--tw-bg-opacity: 1;
 	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
@@ -1413,8 +1404,6 @@ video {
 	padding: 0px;
 }.p-3{
 	padding: 0.75rem;
-}.p-1{
-	padding: 0.25rem;
 }.px-4{
 	padding-left: 1rem;
 	padding-right: 1rem;
@@ -1954,6 +1943,9 @@ video {
   
     font-size: 25px !important;
   
+}.bg_clds{
+    padding: 0rem 0.7rem;
+    box-shadow: 0px 0px 3px -1px rgb(1 0 0);
 }.border_btn{
     border-radius: 0.3rem !important;
 }.btn_mas {
