--- a/resources/css/blog.css
+++ b/resources/css/blog.css
@@ -9,6 +9,10 @@
     font-size: 25px !important;
   
 }
+.bg_clds{
+    padding: 0rem 0.7rem;
+    box-shadow: 0px 0px 3px -1px rgb(1 0 0);
+}
 .border_btn{
     border-radius: 0.3rem !important;
 }
